--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </ul>
     </section>
     <section>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut officia laborum nulla doloremque quasi ipsam labore totam sunt sed voluptatibus reprehenderit minima tenetur rem nemo id, obcaecati eaque repudiandae vel!
+        <h1>Titulo</h1>
+        <h1>Titulo</h1>
+        <h1>Titulo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, accusamus voluptatibus. Eum quas voluptates beatae aperiam natus quam repudiandae pariatur voluptatum delectus tenetur, eveniet sed, explicabo architecto ea cupiditate quisquam?</p>
     </section>
     <script type="text/javascript">
         function imgSlider(anything){
