--- a/template2.html
+++ b/template2.html
@@ -19,7 +19,13 @@
     </header>
     <section class="section">
         <div class="diagonal">
-            <img src="./assets/balon-fut.png" alt="" height="300">
+            <div class="content">
+                <img src="./assets/balon-fut.png" alt="" height="250" class="content-image" style="margin: auto;">
+                <div class="content-info">
+                    <h2 class="content-info-title">Sport Grass</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque deleniti quisquam maxime, ipsum, veniam sapiente.</p>
+                </div>
+            </div>
         </div>
         <div>
 
