barra de deportes agregada en version grande

--- a/template2.html
+++ b/template2.html
@@ -18,17 +18,89 @@
         </ul>
     </header>
     <section class="section">
-        <div class="diagonal">
-            <div class="content">
-                <img src="./assets/balon-fut.png" alt="" height="250" class="content-image" style="margin: auto;">
-                <div class="content-info">
-                    <h2 class="content-info-title">Sport Grass</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque deleniti quisquam maxime, ipsum, veniam sapiente.</p>
+        <div class="cards">
+            <div class="diagonal">
+                <div class="content">
+                    <img src="./assets/balon-fut.png" alt="" height="200" class="content-image">
+                    <div class="content-info">
+                        <h2 class="content-info-title">Sport Grass</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque deleniti quisquam maxime, ipsum, veniam sapiente. blaa bla blabla blabla blaaa bla bla bla bla blablaaaa</p>
+                        <div class="d-flex">
+                            <a href="#">Conoce más</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div>
-
+        <div class="icons-bar">
+            <div class="icons-bar-content">
+                <ul>
+                    <li class="active">
+                        <a href="#">
+                            <i class="fas fa-info"></i>
+                            <span>Información</span>
+                        </a>
+                    </li>
+                    <div></div>
+                    <li>
+                        <a href="#">
+                            <i class="far fa-futbol"></i>
+                            <span>Fútbol</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-baseball-ball"></i>
+                            <span>Béisbol</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-football-ball"></i>
+                            <span>Rugby</span>
+                        </a>
+                    </li>
+                    <div></div>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-basketball-ball"></i>
+                            <span>Baloncesto</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-volleyball-ball"></i>
+                            <span>Vóleibol</span>
+                        </a>
+                    </li>
+                    <div></div>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-biking"></i>
+                            <span>Bicicleta</span>
+                        </a>
+                    </li>
+                    <div></div>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-university"></i>
+                            <span>Universidades</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-hotel"></i>
+                            <span>Hoteles</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-dumbbell"></i>
+                            <span>Otros</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <script type="text/javascript" src="main.js"></script>
