template mejorado para enviar a git y probar pantalla

--- a/template2.html
+++ b/template2.html
@@ -21,10 +21,10 @@
         <div class="cards">
             <div class="diagonal">
                 <div class="content">
-                    <img src="./assets/balon-fut.png" alt="" height="200" class="content-image">
+                    <img src="./assets/balon-fut.png" alt="" height="180" class="content-image">
                     <div class="content-info">
-                        <h2 class="content-info-title">Sport Grass</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque deleniti quisquam maxime, ipsum, veniam sapiente. blaa bla blabla blabla blaaa bla bla bla bla blablaaaa</p>
+                        <h2 class="content-info-title">Sport <span>Grass</span></h2>
+                        <p>En Sport Grass desarrollamos el estudio, diseño, planeación, contratación, y ejecución de toda clase de obras civiles, edificaciones, escenarios deportivos y bienes inmuebles en general.</p>
                         <div class="d-flex">
                             <a href="#">Conoce más</a>
                         </div>
