antes de dormir

--- a/template2.html
+++ b/template2.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sport Grass</title>
     <link rel="stylesheet" href="css/style2.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
     <header>
         <a href=""><img src="./assets/logo.png" alt="Logo" class="logo"></a>
         <ul>
             <li><a href="#">Inicio</a></li>
-            <li><a href="#">Servicios</a></li>
+            <li><a href="#servicios">Servicios</a></li>
             <li><a href="#">Contacto</a></li>
             <li><a href="#">Others</a></li>
         </ul>
@@ -20,8 +19,52 @@
     <section class="section">
         <div class="cards">
             <div class="diagonal">
+                <div class="background-animation">
+                    <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
                 <div class="content">
-                    <img src="./assets/balon-fut.png" alt="" height="180" class="content-image">
+                    <img src="./assets/balon-fut.png" alt="" height="160" class="content-image">
+                    <img src="./assets/pasto.png" alt="" class="m-auto">
+                    <div class="content-info">
+                        <h2 class="content-info-title">Sport <span>Grass</span></h2>
+                        <p>En Sport Grass desarrollamos el estudio, diseño, planeación, contratación, y ejecución de toda clase de obras civiles, edificaciones, escenarios deportivos y bienes inmuebles en general.</p>
+                        <div class="d-flex">
+                            <a href="#">Conoce más</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards d-none">
+            <div class="diagonal">
+                <div class="background-animation">
+                    <ul class="circles">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+                <div class="content">
+                    <img src="./assets/balon-fut.png" alt="" height="160" class="content-image">
+                    <img src="./assets/pasto.png" alt="" class="m-auto">
                     <div class="content-info">
                         <h2 class="content-info-title">Sport <span>Grass</span></h2>
                         <p>En Sport Grass desarrollamos el estudio, diseño, planeación, contratación, y ejecución de toda clase de obras civiles, edificaciones, escenarios deportivos y bienes inmuebles en general.</p>
@@ -100,6 +143,34 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section class="container" id="servicios">
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <img src="./assets/designer.svg" alt="" width="400">
+            </div>
+            <div class="col-12 col-md-6">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse quae harum architecto enim eos. Libero dignissimos dolorum doloremque quibusdam, quam maiores a autem, iusto quis ratione blanditiis perspiciatis ipsa enim!
+                </p>
+            </div>
+        </div>
+        <div class="testimonial-container">
+            <div class="box">
+                <div class="imgBox">
+                    <img src="person.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum recusandae quaerat delectus molestias excepturi blanditiis eveniet odit.</p>
+                <h4>Someone Famous <br><span>Creative Director</span></h4>
+            </div>
+            <div class="box">
+                <div class="imgBox">
+                    <img src="person.jpg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum recusandae quaerat delectus molestias excepturi blanditiis eveniet odit.</p>
+                <h4>Someone Famous <br><span>Creative Director</span></h4>
             </div>
         </div>
     </section>
